tests/e2e/failing/receive/failure-redeclaration.unt
thread_def Main {
  receive {
    (int x, string x) -> {
      print("hi");
    }
    _ -> {}
  }
}